Fix: H4 wrapping on self & smaller h3

--- a/style.css
+++ b/style.css
@@ -130,12 +130,11 @@ h2 {
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 
 h4 {
     font-size: larger;
-    line-height: 0;
 }
 
 nav ul {
